--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-react-pdf": "^5.7.0",
     "@syncfusion/ej2-react-spreadsheet": "^20.2.49",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "dom-to-pdf": "^0.3.1",
+    "html-to-pdfmake": "^2.4.6",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.4",
+    "pdfmake": "^0.2.5",
     "react": "^18.2.0",
     "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.7",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
