--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.8",
     "@progress/kendo-react-pdf": "^5.7.0",
     "@syncfusion/ej2-react-spreadsheet": "^20.2.49",
     "@testing-library/jest-dom": "^5.16.5",
